Changes to Invoice and InvoiceItems naming and organization
